202304052221: Removed distinct function in typeLists as it filters multiple disabled items
202304052224: Testing img src to icons in storage
202304052234: Testing using fileUri for displaying images
202304052237: Using content:/// for image src
202304061057: Added sha check for transaction lists
202304101652: Refactored transaction flows
202304101654: Initial version
202304101658: Initial version
202304101707: Updated API key for exchange rate
202304101854: Exclude emoticons in transactions list values
202304102042: Create arrays for typelists with unicode
202304102222: Added autofill location and auto complete subcategory
202304102311: Removed old location input, hidden extra fields, increased size of currency and quantity inputs
202304102338: Removed state as a location field
202304102349: Fixes for screen alignment
202304111043: Testing DOM storage for screens
202304111636: Added validation step
202304111644: Initial version
202304111644: Fix validation path
202304111646: Initial version
202304111647: Initial version
202304111649: Forgot to add read file for validation.
202304112012: Added validation at the right entry point
202304112207: Changed to validationFile instead
202304140041: Finished validation block (!) and added dynamic default values
202304141544: Added more dynamic default values
202304142232: Updated transaction screen
202304142254: Clear some transaction fields before another round
202304142306: Fixed incorrect connection
202304142308: Clear amount between transaction rounds
202304142321: If address is URL zero all other location values
202304150031: Added toast to confirm transaction
202304150044: Edited toast message to be one line
202304150052: Adjusted toast message to include brand
202304150117: Fixed currency symbol in toast
202304161539: Initial version
202304200012: Rebooting configuration
202304200014: Updated transaction screen
202304202234: Added check for transactionLists json before SHA check