@@ -1,1 +1,1 @@
-{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304202233","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","exchangerateAPIKey":"248818aaeb4f8f3f1272dfb2","mapboxAPIKey":"pk.eyJ1IjoiZy04IiwiYSI6ImNsN29ubHhnNTA3NjUzcG10emd6OXJ3cHcifQ.qqVFQrIOUI5kX9H4hNJxuA","comment":"Added check for transactionLists json before SHA check","uri":"content://com.llamalab.automate.provider/flows/22/data"}
+{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304202240","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","exchangerateAPIKey":"248818aaeb4f8f3f1272dfb2","mapboxAPIKey":"pk.eyJ1IjoiZy04IiwiYSI6ImNsN29ubHhnNTA3NjUzcG10emd6OXJ3cHcifQ.qqVFQrIOUI5kX9H4hNJxuA","comment":"Rename SHA check variables correctly","uri":"content://com.llamalab.automate.provider/flows/22/data"}
