@@ -13,5 +13,6 @@
         "Satrix World Equity",
         "Lyxor Europe 600",
         "Lyxor World",
-        "iShares Emerging Markets"
+        "iShares Emerging Markets",
+        "ght"
 ]
