@@ -1,0 +1,1 @@
+{"accounts":"<option value='Income'>Income</option><option value='Expenses'>Expenses</option><option value='' disabled='disabled'>----------</option><option value='Revolut Current'>Revolut Current</option><option value='N26 Current'>N26 Current</option><option value='FNB Cheque'>FNB Cheque</option><option value='Cash'>Cash</option><option value='' disabled='disabled'>----------</option><option value='Lyxor Pan Africa UCITS'>Lyxor Pan Africa UCITS</option><option value='Coronation Global Managed'>Coronation Global Managed</option><option value='Nedgroup Global Equity'>Nedgroup Global Equity</option><option value='Satrix World Equity'>Satrix World Equity</option><option value='Lyxor Europe 600'>Lyxor Europe 600</option><option value='Lyxor World'>Lyxor World</option><option value='iShares Emerging Markets'>iShares Emerging Markets</option>","category":"<option value='Food'>\ud83c\udf7d Food</option><option value='Transfer'>\ud83d\udcb8 Transfer</option><option value='Supplies'>\ud83d\udce6 Supplies</option><option value='Services'>\ud83d\udece Services</option><option value='' disabled='disabled'>----------</option><option value='Assets'>\ud83d\udcbb Assets</option><option value='Digital'>\ud83d\uddb1 Digital</option><option value='Discounts'>\ud83c\udff7️ Discounts</option><option value='Employment'>\ud83d\udcbc Employment</option><option value='Entertainment'>\ud83c\udf7f Entertainment</option><option value='Fees'>\ud83e\uddfe Fees</option><option value='Giving'>\ud83e\udef6\ud83c\udffd Giving</option><option value='Health'>\ud83e\ude7a Health</option><option value='Insurance'>\ud83d\udc37 Insurance</option><option value='Investment'>\ud83d\udcc8 Investment</option><option value='Loan'>\ud83d\udcc9 Loan</option><option value='Property'>\ud83c\udfe0 Property</option><option value='Refund'>\ud83d\udcab Refund</option><option value='Tax'>\ud83c\udfe2 Tax</option><option value='Travel'>\ud83c\udfdd Travel</option><option value='Uncategorised'>❓ Uncategorised</option><option value='Wardrobe'>\ud83d\udc54 Wardrobe</option>","currency":"<option value='EUR'>\ud83c\uddea\ud83c\uddfa \u20ac</option><option value='ZAR'>\ud83c\uddff\ud83c\udde6 R</option><option value='USD'>\ud83c\uddfa\ud83c\uddf8 $</option><option value='SEK'>\ud83c\uddf8\ud83c\uddea kr</option><option value='GBP'>\ud83c\uddec\ud83c\udde7 £</option>","frequency":"<option value='Once Off'>Once Off</option><option value='Weekly'>Weekly</option><option value='Monthly'>Monthly</option>","quantityUnit":"<option value='x'>x</option><option value='g'>g</option><option value='ml'>ml</option><option value='lt'>lt</option><option value='kg'>kg</option><option value='nights'>nights</option><option value='km'>km</option><option value='mnth'>mnth</option>","subcategory":"<option value='Accessories'>Accessories</option><option value='Accommodation'>Accommodation</option><option value='Activity'>Activity</option><option value='Admin'>Admin</option><option value='Airtime'>Airtime</option><option value='Allowance'>Allowance</option><option value='Alterations'>Alterations</option><option value='Apps'>Apps</option><option value='Art'>Art</option><option value='Baking'>Baking</option><option value='Bank'>Bank</option><option value='Bathroom'>Bathroom</option><option value='Bedroom'>Bedroom</option><option value='Beef'>Beef</option><option value='Bond'>Bond</option><option value='Bonus'>Bonus</option><option value='Books'>Books</option><option value='Breakfast'>Breakfast</option><option value='Business'>Business</option><option value='Cape Town'>Cape Town</option><option value='Cereal'>Cereal</option><option value='Charity'>Charity</option><option value='Clothing'>Clothing</option><option value='Cloud'>Cloud</option><option value='Concert'>Concert</option><option value='Condiments'>Condiments</option><option value='Contents'>Contents</option><option value='Coupon'>Coupon</option><option value='Cultural'>Cultural</option><option value='Dairy'>Dairy</option><option value='Data'>Data</option><option value='Delivery'>Delivery</option><option value='Disability'>Disability</option><option value='Dividend'>Dividend</option><option value='Drinks'>Drinks</option><option value='Education'>Education</option><option value='Eggs'>Eggs</option><option value='Event'>Event</option><option value='Exchange Traded Fund'>Exchange Traded Fund</option><option value='Exercise'>Exercise</option><option value='Expenses'>Expenses</option><option value='Fee'>Fee</option><option value='Fish'>Fish</option><option value='Fixed Deposit'>Fixed Deposit</option><option value='Food'>Food</option><option value='Freelance'>Freelance</option><option value='Fruit'>Fruit</option><option value='Full-Time'>Full-Time</option><option value='Furniture'>Furniture</option><option value='Game'>Game</option><option value='Gift'>Gift</option><option value='Grains'>Grains</option><option value='Gratuity'>Gratuity</option><option value='Health'>Health</option><option value='Home'>Home</option><option value='Hygiene'>Hygiene</option><option value='Import'>Import</option><option value='Income'>Income</option><option value='Interaccount'>Interaccount</option><option value='Interest'>Interest</option><option value='Intraccount'>Intraccount</option><option value='Investment'>Investment</option><option value='Junk'>Junk</option><option value='Kit'>Kit</option><option value='Kitchen'>Kitchen</option><option value='Lamb'>Lamb</option><option value='Laundry'>Laundry</option><option value='Legal'>Legal</option><option value='Liability'>Liability</option><option value='Library'>Library</option><option value='Life'>Life</option><option value='Media'>Media</option><option value='Medical'>Medical</option><option value='Mental'>Mental</option><option value='Movies'>Movies</option><option value='Office'>Office</option><option value='Pork'>Pork</option><option value='Part-Time'>Part-Time</option><option value='Poultry'>Poultry</option><option value='Property'>Property</option><option value='Protein'>Protein</option><option value='Refund'>Refund</option><option value='Rent'>Rent</option><option value='Restaurant'>Restaurant</option><option value='Retirement'>Retirement</option><option value='Salad'>Salad</option><option value='Salary'>Salary</option><option value='Sale'>Sale</option><option value='Sausages'>Sausages</option><option value='Security'>Security</option><option value='Shares'>Shares</option><option value='Shoes'>Shoes</option><option value='Software'>Software</option><option value='Soup'>Soup</option><option value='Souvenir'>Souvenir</option><option value='Sports'>Sports</option><option value='Stationery'>Stationery</option><option value='Stipend'>Stipend</option><option value='Student'>Student</option><option value='Sundry'>Sundry</option><option value='Tax Free'>Tax Free</option><option value='Tech'>Tech</option><option value='Tour'>Tour</option><option value='Transport'>Transport</option><option value='Travel'>Travel</option><option value='Uncategorised'>Uncategorised</option><option value='Unemployment'>Unemployment</option><option value='Unit Trusts'>Unit Trusts</option><option value='Utilities'>Utilities</option><option value='Vegan'>Vegan</option><option value='Vegetables'>Vegetables</option><option value='Web'>Web</option>"}
